Add addr setting for db. Use command style logs. Add put handler.
